--- a/.github/workflows/PyTest.yaml
+++ b/.github/workflows/PyTest.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r pipeline/requirements.txt
 
       # Step 4: Run tests and generate coverage report
       - name: Run tests 
@@ -37,7 +37,7 @@ jobs:
       # Step 5: Upload coverage report as artifact
       - name: Upload coverage report
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: htmlcov/
@@ -69,4 +69,6 @@ jobs:
         env:
           GCS_BUCKET_NAME: ${{ secrets.GCS_BUCKET_NAME }}
         run: |
-          gsutil -m cp -r htmlcov/* gs://${GCS_BUCKET_NAME}/coverage-reports/
+           CURRENT_DATE=$(date +"%Y-%m-%d")
+           zip -r coverage-report.zip htmlcov/
+           gsutil -m cp coverage-report.zip gs://${GCS_BUCKET_NAME}/Pytest-reports/${CURRENT_DATE}/coverage-report.zip
