--- a/.github/workflows/model.yml
+++ b/.github/workflows/model.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r pipeline/requirements.txt
 
       # Step 4: Run Py Tests
       - name: Run Tests
